adda custom hook fixes and also some styles details and make the readme more readable

--- a/src/styles/mainHeader.module.css
+++ b/src/styles/mainHeader.module.css
@@ -1,5 +1,7 @@
 .main_header {
     display: flex;
+    width: 100%;
+        align-items: center;
     border-bottom: solid 1px darkgrey;
 }
 
