--- a/src/styles/mediaPlayer.module.css
+++ b/src/styles/mediaPlayer.module.css
@@ -6,11 +6,11 @@
 }
 @media only screen and (max-width: 786px) {
     .mediaPlayer {
-        flex-direction: column;
+    flex-direction: column;
         align-items: center;
-
+height: 100%;
     }
-}
+  }
 
 .mediaPlayer_container {
     height: fit-content;
